# TIP-Travel-Intelligence-and-planner

./: .env.example  .env.production.example  .gitignore  .vercelignore  CLAUDE.md  DEPLOYMENT.md  PRD.md  RAILWAY_SETUP.md  README.md  SSOT-plan.md  SSOT.md  USER-TESTING-FIX-PLAN.md  audit_1.md  claude-progress.txt  docker-compose.yml  docker.ps1  feature_list.json  final-memory.json  init.ps1  master-plan.md  new-issues.md  package-lock.json  package.json  railway-deployment-status.md  railway.toml  repo-index.json  user-testing-issues.md  validate_credentials.py  verify-railway-deployment.md
.Frontend_enhancement/: landing-page-b2b-support.css  landing-page-b2b-support.html  landing-page-content-b2b-support.md  landing-page-content.md  landing-page-guide.md  landing-page-mockup.md  landing-page-tip.css  landing-page-tip.html  landing-page-variations.md  visual-style-guide.md
.api_replacement/: new_additions.md  research.md
.claude/: ralph-loop.local.md
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
.prompts/: 00-session-context.md  01-I2-user-profile-settings.md  02-I4-trip-creation-wizard.md  03-I5-ai-agents-backend.md  04-I5-report-display-frontend.md  05-I6-visual-itinerary-builder.md  06-I7-collaboration-pdf-export.md  07-I8-trip-updates-recalculation.md  08-I9-templates-travel-history.md  09-I10-analytics-settings.md  10-integration-testing-deployment.md  README.md  prompt_frontend.md
.ship_plan/: audit.md  remediation-plan.md
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  =0.1.23  Dockerfile  Dockerfile.dev  Dockerfile.worker  PRE-COMMIT-GUIDE.md  RAILWAY-DEPLOYMENT.md  SETUP-SUMMARY.md  docker-compose.dev.yml  pyproject.toml  pytest.ini  railway.toml  requirements.txt  setup-precommit.ps1  setup-precommit.sh  test_precommit_demo.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  config.py  exceptions.py  interfaces.py
backend/app/agents/attractions/: __init__.py  agent.py  models.py  prompts.py  tasks.py  tools.py
backend/app/agents/country/: __init__.py  agent.py  models.py  prompts.py  tasks.py  tools.py
backend/app/agents/culture/: __init__.py  agent.py  models.py  prompts.py  tasks.py  tools.py
backend/app/agents/currency/: __init__.py  agent.py  models.py  prompts.py  tasks.py  tools.py
backend/app/agents/flight/: __init__.py  agent.py  models.py  prompts.py  tasks.py  tools.py
backend/app/agents/food/: __init__.py  agent.py  models.py  prompts.py  tasks.py  tools.py
backend/app/agents/itinerary/: __init__.py  agent.py  models.py  prompts.py  tasks.py  tools.py
backend/app/agents/orchestrator/: README.md  __init__.py  agent.py
backend/app/agents/visa/: __init__.py  agent.py  models.py  prompts.py  tasks.py  tools.py
backend/app/agents/weather/: __init__.py  agent.py  models.py  prompts.py  tasks.py  tools.py
backend/app/api/: analytics.py  feedback.py  healthcheck.py  history.py  itinerary.py  places.py  profile.py  recommendations.py  settings.py  sharing.py  templates.py  trips.py
backend/app/core/: api_validation.py  auth.py  celery_app.py  config.py  errors.py  exception_handlers.py  gdpr.py  logging_config.py  security.py  sentry.py  supabase.py
backend/app/models/: analytics.py  itinerary.py  profile.py  report.py  settings.py  sharing.py  template.py  trips.py
backend/app/scrapers/: __init__.py  base.py
backend/app/services/: change_detector.py  pdf_generator.py  recommendations.py  report_aggregator.py
backend/app/services/country/: __init__.py  rest_countries_client.py
backend/app/services/currency/: __init__.py  exchange_api_client.py
backend/app/services/flight/: __init__.py  amadeus_client.py  skyscanner_client.py
backend/app/services/visa/: __init__.py  travel_buddy_client.py
backend/app/services/weather/: __init__.py  visual_crossing_client.py  weather_api_client.py
backend/app/services/web_search/: __init__.py  firecrawl_client.py
backend/app/tasks/: __init__.py  agent_jobs.py  cleanup.py  example.py
backend/tests/: __init__.py  conftest.py  integration_test_manual.py  test_agent_e2e.py  test_celery_tasks.py
backend/tests/agents/: __init__.py  test_attractions_agent.py  test_base_agent.py  test_country_agent.py  test_culture_agent.py  test_currency_agent.py  test_flight_agent.py  test_food_agent.py  test_itinerary_agent.py  test_orchestrator.py  test_visa_agent.py  test_visa_models.py  test_weather_agent.py
backend/tests/api/: test_analytics.py  test_feedback.py  test_itinerary.py  test_places.py  test_profile.py  test_settings.py  test_sharing.py  test_trip_updates.py  test_trips_create.py
backend/tests/scrapers/: __init__.py  test_base.py
backend/tests/services/: test_amadeus_client.py  test_change_detector.py  test_exchange_api_client.py  test_pdf_generator.py  test_report_aggregator.py  test_rest_countries_client.py  test_travel_buddy_client.py  test_visual_crossing_client.py  test_weather_api_client.py
backend/tests/tasks/: test_cleanup_tasks.py
contracts/: openapi.yaml  types.ts
docs/: FIX_PLAN_CI_CD_TESTS.md  I2-backend-testing-guide.md  I2-final-session-summary.md  I2-implementation-status.md  I2-integration-test-script.md  I2-integration-testing-checklist.md  I2-session-completion-summary.md  I2-testing-report.md  I9-profile-implementation-summary.md  I9-supabase-storage-completion.md  I9-vercel-build-fix.md  INTEGRATED_PLAN.md  PRD.md  comprehensive_plan.md  data_models.md  delivery_dependencies.json  delivery_dependencies.md  phase1_implementation_guide.md  remediation_validation_report.md  services_config.md  session-13-i9-profile-notes.txt  supabase-storage-setup.md  visa-agent-implementation.md  visa-agent-roadmap.md
frontend/: .env.example  .prettierignore  .prettierrc  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  jest.config.cjs  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vercel.json
product-plan/: EXPORT_STATUS.md  README.md  product-overview.md
(+287 files in other folders)
