# ==============================================
# TIP Backend - Python Project Configuration
# ==============================================

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ==============================================
# Black - Code Formatter
# ==============================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
  | htmlcov
)/
'''

# ==============================================
# Ruff - Linter
# ==============================================
[tool.ruff]
line-length = 100
target-version = "py311"

# Exclude patterns
extend-exclude = [
    "migrations",
    ".venv",
    "htmlcov",
    "__pycache__",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), pyflakes (F), isort (I), and more
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PL",  # pylint
    "TRY", # tryceratops
]

# Ignore specific rules
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "TRY003",  # avoid specifying long messages outside exception class
    # Temporarily ignored - to be fixed incrementally
    "G004",    # logging statement uses f-string (many occurrences)
    "G201",    # use logging.exception instead of logging.error with exc_info
    "DTZ003",  # datetime.utcnow() used (prefer timezone-aware)
    "DTZ005",  # datetime.now() used without timezone
    "DTZ011",  # datetime.date.today() used
    "EM101",   # exception must not use string literal
    "EM102",   # exception must not use f-string literal
    "TRY300",  # consider moving statement to else block
    "TRY301",  # abstract raise to inner function
    "TRY002",  # create your own exception
    "B904",    # raise from for exception chaining
    "RET505",  # unnecessary else after return
    "RET504",  # unnecessary assignment before return
    "PLR2004", # magic value used in comparison
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "ARG001",  # unused function argument
    "ARG002",  # unused method argument
    "F841",    # local variable assigned but never used
    "SIM102",  # use single if statement
    "SIM105",  # use contextlib.suppress
    "PLC0415", # import should be at top-level (needed for lazy imports)
    "TRY400",  # use logging.exception instead of logging.error
    "UP045",   # use X | None instead of Optional[X]
    "N812",    # lowercase imported as non-lowercase
    "N815",    # variable should not be mixedCase
    "PLW0603", # using global statement is discouraged
    "DTZ007",  # naive datetime constructed using strptime
    "SIM114",  # combine if branches
    "F541",    # f-string without placeholders
    "E402",    # module level import not at top
    "PIE790",  # unnecessary pass statement
    "F811",    # redefinition of unused name
    "N806",    # variable in function should be lowercase
    "TRY004",  # prefer TypeError for invalid type
    "SIM108",  # use ternary operator
    "UP035",   # import from collections.abc
    "UP017",   # use datetime.UTC alias
    "I001",    # import block unsorted
    "E722",    # bare except (fix incrementally)
    "C401",    # unnecessary generator
    "PLR1714", # consider merging multiple comparisons
    "G003",    # logging statement uses +
    "N818",    # exception name should end with Error
    "G101",    # extra field clashes with LogRecord
    "ISC001",  # implicitly concatenated strings (conflicts with Black)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # unused function args -> fixtures nevertheless are functionally relevant
    "PLR2004", # magic value used in comparison
    "PT001",   # @pytest.fixture() over @pytest.fixture
    "PT011",   # pytest.raises too broad
    "PT023",   # @pytest.mark.X() over @pytest.mark.X
    "B017",    # assert blind exception
    "F401",    # unused imports in tests
    "F811",    # redefinition of unused name (fixtures)
    "DTZ001",  # datetime without timezone in tests
    "E712",    # == True/False in tests
    "SIM117",  # nested with statements in tests
    "SIM300",  # yoda conditions in tests
]
"__init__.py" = ["F401"] # unused imports in __init__ files
"app/agents/**/*.py" = [
    "I001",   # import sorting - fix incrementally
    "F401",   # unused imports - fix incrementally
    "F821",   # undefined name - fix incrementally
]
"app/tasks/**/*.py" = [
    "F821",   # undefined name - fix incrementally
]
"app/services/**/*.py" = [
    "I001",   # import sorting - fix incrementally
    "F401",   # unused imports - fix incrementally
]
"app/api/**/*.py" = [
    "F401",   # unused imports - fix incrementally
]
"app/core/**/*.py" = [
    "F401",   # unused imports - fix incrementally
]
"app/models/**/*.py" = [
    "F401",   # unused imports - fix incrementally
]
"app/scrapers/**/*.py" = [
    "F401",   # unused imports - fix incrementally
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# ==============================================
# Mypy - Static Type Checker
# ==============================================
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
strict_equality = false
strict_concatenate = false

# Ignore missing imports for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "celery.*",
    "crewai.*",
    "langchain_anthropic.*",
    "langchain_core.*",
    "langchain_google_genai.*",
    "langchain_openai.*",
    "supabase.*",
    "flower.*",
    "fakeredis.*",
]
ignore_missing_imports = true

# Ignore errors in problematic modules (to be fixed incrementally)
[[tool.mypy.overrides]]
module = [
    "app.agents.*",
    "app.services.*",
    "app.api.*",
    "app.core.*",
    "app.models.*",
    "app.tasks.*",
    "app.scrapers.*",
]
ignore_errors = true

# Less strict rules for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ==============================================
# Pytest - Testing Framework
# ==============================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-p", "no:warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "celery: Celery-related tests",
    "agent: Agent-related tests",
]

# ==============================================
# Coverage - Test Coverage
# ==============================================
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
